--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_REDDIT_USER_ID=dV4UXTcxq6q1dPQOCTYdvA
-REACT_APP_REDDIT_SECRET_ID=7AEf8gpQnLaf_rg46iJ3mUAijnc85A
+REACT_APP_REDDIT_SECRET_ID=7AEf8gpQnLaf_rg46iJ3mUAijnc85A;
